--- a/Pfp.js/package.json
+++ b/Pfp.js/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.21.1",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.1",
+    "formidable": "^3.5.2"
   }
 }
